k8s/charts/redis-timeseries/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-timeseries
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
