k8s/charts/redis-timeseries/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-timeseries
spec:
  ingressClassName: nginx
  rules:
  - host: "redis.alphavector.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis
            port:
              number: 6379
